--- a/website/newsletter/125/index.mdx
+++ b/website/newsletter/125/index.mdx
@@ -8,7 +8,7 @@ image: /img/TWIR_POST.png
 
 Hi everyone!
 
-This week is **[Black Friday](/blackfriday)**. I created a page with the best deals for a React dev. I already found some of them, but some are not announced yet, so come back on Friday ;)
+This week is **[Black Friday](/black-friday)**. I created a page with the best deals for a React dev. I already found some of them, but some are not announced yet, so come back on Friday ;)
 
 [![Black Friday 2022 Banner](/img/BLACK_FRIDAY_2022.png)](/blackfriday)
 
