--- a/website/newsletter/126/index.mdx
+++ b/website/newsletter/126/index.mdx
@@ -53,21 +53,20 @@ You can get started here: [flycode.com/developers](https://www.flycode.com/devel
 
 ## 💸 Sponsor {#sponsor2}
 
-
-
 [![Yuzu is the Best Finance Data API for Frontends](/emails/issues/126/yuzu.png)](https://www.yuzu.dev/)
-
 
 **[Yuzu is the Best Finance Data API for Frontends](https://www.yuzu.dev/)**
 
 Yuzu is designed to eliminate data engineering for frontend developers building with data sets like:
--   Live Stock, crypto & forex prices
--   Up-to-the minute market news
--   ETF and Mutual fund details
+
+- Live Stock, crypto & forex prices
+- Up-to-the minute market news
+- ETF and Mutual fund details
 
 Developers love Yuzu's GraphQL, Websockets, and SQL APIs because it allows them to flexibly grab any data, and focus on building end-user experiences, not on scraping, normalizing and maintaining data sets.
 
-Yuzu's professional-grade data is used by brokerages, analytical platforms, and investing apps ranging from emerging startups to established finance firms.\
+Yuzu's professional-grade data is used by brokerages, analytical platforms, and investing apps ranging from emerging startups to established finance firms.
+
 Best thing? Anyone can [start for free](https://www.yuzu.dev/pricing)!
 
 ---
