--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/126/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/126/index.mdx
@@ -83,7 +83,13 @@ Le meilleur ? Tout le monde peut [commencer gratuitement](https://www.yuzu.dev/p
 
 ## 🧑‍💻Jobs {#jobs}
 
-<Todo />
+🧑‍💼 [**Masteos - Lead ReactJS - Hybride ou Remote - 75-90k€**](https://www.welcometothejungle.com/fr/companies/masteos/jobs/lead-front-reactjs-h-f_paris?q=97ae44f44512e0f1968e134f33de64ea&o=1376093)
+
+Masteos réinvente l’expérience de l’investissement locatif, en proposant un parcours entièrement dématérialisé et un accompagnement de haut niveau aux particuliers qui souhaitent acheter un bien pour le louer.
+
+🧑‍💼 [**Premier Octet - Développeurs(euses) React - Paris**](https://www.premieroctet.com/jobs)
+
+Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendrez en développement sur des projets variés et motivants, à la fois serveur et front (React, Nest, Next), et éventuellement mobile (React Native).
 
 💡 [Comment publier une offre d'emploi ?](https://thisweekinreact.com/fr/sponsor)
 
