--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/126/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/126/index.mdx
@@ -53,6 +53,14 @@ Vous pouvez commencer ici: [flycode.com/developers](https://www.flycode.com/deve
 
 Remix Deferred overview? https://twitter.com/ebey_jacob/status/1596927214712680448
 
+[Solid Final Form – Proof of Concept](https://erikras.com/blog/solid-final-form-poc)
+
+tRPC contributing to Remix: https://twitter.com/s4chinraja/status/1596601501887082496 + https://twitter.com/alexdotjs/status/1596604718700466176
+
+React is simple? https://twitter.com/kentcdodds/status/1596516282181963776
+
+Remix progressive enhancement form upload - https://twitter.com/ebey_jacob/status/1596223682246234113
+
 <SubscribeFormEmbed />
 
 ---
@@ -79,7 +87,15 @@ Le meilleur ? Tout le monde peut [commencer gratuitement](https://www.yuzu.dev/p
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+[Shopify - Our Solution for Measuring React Native Rendering Times](https://shopify.engineering/measuring-react-native-rendering-times) + https://twitter.com/davebcn87/status/1595819683311226880
+
+setNativeProps back? https://twitter.com/o_kwasniewski/status/1596090790350303233
+
+[0.71.0-rc.2](https://twitter.com/Kelset/status/1595839212502261760)
+
+[React Native Windows 0.69.14](https://github.com/microsoft/react-native-windows/releases/tag/react-native-windows_v0.69.14)
+
+Frame processing: https://twitter.com/mrousavy/status/1595746972190883840
 
 ---
 
@@ -109,7 +125,12 @@ Pas de contenu cette semaine 😅
 
 ## 🔀 Autre {#other}
 
+ESLint rewrite? https://twitter.com/kentcdodds/status/1595860611963170816
+
+[Octoverse 2022 - The state of open source software](https://octoverse.github.com/)
+
 - [TypeScript 5.0 is coming...](https://www.youtube.com/watch?v=PTU-H6Wwbh8)
+- [The Complete Guide to the Fastify Plugin System](https://www.nearform.com/blog/complete-guide-fastify-plugin-system/)
 
 <Todo />
 
@@ -117,6 +138,6 @@ Pas de contenu cette semaine 😅
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+https://twitter.com/t3dotgg/status/1595878903012552704
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/todo)
